--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Users\\sofia\\AppData\\Roaming\\NetBeans\\24\\tomcat80.properties
-j2ee.server.home=C:/xampp/tomcat
-j2ee.server.instance=tomcat80:home=C:\\xampp\\tomcat
-user.properties.file=C:\\Users\\sofia\\AppData\\Roaming\\NetBeans\\24\\build.properties
+deploy.ant.properties.file=C:\\Users\\pedro\\AppData\\Roaming\\NetBeans\\21\\tomcat90.properties
+j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 9.0
+j2ee.server.instance=tomcat90:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 9.0
+user.properties.file=C:\\Users\\pedro\\AppData\\Roaming\\NetBeans\\21\\build.properties
